app/assets/stylesheets/all/frasernw.css.scss
@import "_globals";


$FNW_STATUS_INDENT: 40px;    
$FNW_NAV_PADDING_LEFT: 5%;
$FNW_NAV_PADDING_RIGHT: 10%;
    
.admin, .navbar .nav > li.admin
{
  display: none;
}

body 
{
  background-color: $FNW_BACKGROUND;
}

#main-nav .navbar-inner
{
  background-color: $FNW_DARK_GRAY;
  background-image: none;
  border-radius: 0;
  box-shadow: 0 3px 5px $FNW_MID_GRAY;
  
  .brand
  {
    font-size: 26px;
    line-height: 20px;
    text-shadow: #333 0 0 5px;
    font-weight: 200;
  }
  
  .brand:hover
  {
    text-shadow: $FNW_BLUE 0 0 5px;
  }
  
  .navbar-search .search-query, .navbar-search .search-query:focus
  {
    border: none;
    padding: 5px 10px;
    color: $FNW_TEXT;
    background: $FNW_BACKGROUND;
  }
  
  .navbar-search .search-query :-moz-placeholder {
    color: $FNW_MID_GRAY;
  }
  .navbar-search .search-query::-webkit-input-placeholder {
    color: $FNW_MID_GRAY;
  }
}
  
#search_results
{
  -webkit-transition: opacity 0.25s ease;
  -moz-transition: opacity 0.25s ease;
  -ms-transition: opacity 0.25s ease;
  -o-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  opacity: 0;
  
  z-index: 1979;
  position: absolute;
  overflow: hidden;
  top: 34px;
  right: 0;
  margin: 0;
  padding: 0;
  width: 406px;
  background-color: $FNW_BACKGROUND;
  border-bottom: 3px solid $FNW_DARK_GRAY;
  border-left: 3px solid $FNW_DARK_GRAY;
  border-right: 3px solid $FNW_DARK_GRAY;
  -webkit-border-bottom-right-radius: 10px;
  -webkit-border-bottom-left-radius: 10px;
  -moz-border-bottom-left-radius: 10px;
  -moz-border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
  box-shadow: 0 3px 5px $FNW_MID_GRAY;
  
  em
  {
    font-style: normal;
    font-weight: bold;
  }
  
  ul
  {
    margin: 0;
    padding: 0;
    
    li
    {
      display: table;
      list-style: none;
      width: 100%;
      margin: 0;
      padding: 0;
    }
    
    li.group
    {
      padding: 2px 0;
      border-top: 1px solid $FNW_MID_GRAY;
      border-bottom: 1px solid $FNW_MID_GRAY;
      background-color: $FNW_LIGHT_GRAY;
      color: $FNW_RED;
      font-weight: bold;
      font-size: 13px;
      
      [class^="icon-"]
      {
        margin-left: 10px;
        margin-right: 10px;
      }
    }
  
    li.result
    { 
      div
      {
        float: left;
        display: inline-block;
        margin-left: $FNW_STATUS_INDENT;
        width: 200px - $FNW_STATUS_INDENT;
        overflow: visible;
      }
      
      div.specialties, div.city
      {
        margin-left: 20px;
        width: 180px;
      }
      
      div.wait_time
      {
        clear: both;
        padding-bottom: 10px;
      }
      
      a
      {
        display: block;
        padding: 10px 0;
        width: 100%;
        min-height: 20px;
        line-height: 20px;
        color: $FNW_BLUE;
      }
    }
    
    li.result + li.result
    {
      border-top: 1px solid $FNW_LIGHT_GRAY;
    }
    
    li.result:hover
    {
      background: $FNW_LIGHT_BLUE;
      a
      {
        color: $FNW_RED;
        text-decoration: none;
      }
    }
    
    li.empty
    {
      padding: 10px 20px;
      color: $FNW_TEXT; 
      font-weight: bold; 
    }
  }
}

#search_results.show
{
  opacity: 1.0;
}

#body
{
  color:$FNW_TEXT;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 13px;
  
  #left-nav
  {
    position: relative;
    overflow: hidden;
    height: auto;
    
    h3
    {
      color: $FNW_RED;
      padding: 0 $FNW_NAV_PADDING_RIGHT 0 $FNW_NAV_PADDING_LEFT;
      font-weight: normal;
      
      a
      {
        color: inherit;
        text-decoration: none;
      }
      
      a:hover
      {
        text-decoration: underline;
      }
    }
    
    ul
    {
      list-style: none;
      margin: 5px 0 0 0;
      
      li
      {
        border-top: 1px solid $FNW_LIGHT_GRAY;
        
        a
        {
          padding: 5px $FNW_NAV_PADDING_RIGHT 5px $FNW_NAV_PADDING_LEFT;
          display: inline-block;
          width: 100% - $FNW_NAV_PADDING_RIGHT - $FNW_NAV_PADDING_LEFT;
          color: $FNW_BLUE;
          text-decoration: none;
        }
        
        a:hover
        {
          color: $FNW_RED;
          background-color: $FNW_LIGHT_BLUE;
          text-decoration: none;
        }
        
        a.push:after,
        a.pop:before
        {
          display: inline-block;
          width: 14px;
          height: 14px;
          background-position: 14px 14px;
          background-repeat: no-repeat;
          background-image: url(../img/glyphicons-halflings-blue.png);
          content: "\0000a0";
        }
        
        a.push:after
        {
          float: right;
          margin-right: -14px;
          background-position: -264px -96px;
        }
        
        a.pop:before
        {
          float: left;
          background-position: -240px -96px;
          margin-right: 10px;
        }
        
        a.push:hover:after,
        a.pop:hover:before
        {
          background-image: url(../img/glyphicons-halflings-red.png);
        }
      }
    }
    
    .nav_panel 
    {
      -webkit-transition: all 0.25s ease;
      -moz-transition: all 0.25s ease;
      -ms-transition: all 0.25s ease;
      -o-transition: all 0.25s ease;
      transition: all 0.25s ease;
      position: absolute;
      width: 100%;
      height: 100%;
      left: 100%;
      top: 0;
      background: $FNW_BACKGROUND;
    }
    
    .nav_panel.pushed
    {
      left: 0;
    }
  }
  
  #content #container
  {
    h1, h2, h3, h4, h5
    {
      color: $FNW_RED;
      font-weight: normal;  
      
      a
      {
        color: inherit;
      }
    }
    
    p
    {
      margin: 9px 0 0 0;
    }
    
    p.collapse_up
    {
      margin-top: 0;
    }
    
    p:empty
    {
      margin: 0;
    }
    
    a
    {
      color: $FNW_BLUE;
      text-decoration: none;
    }
    
    a:hover
    {
      text-decoration: underline;
    }
    
    a.address
    {
      text-decoration: none;
    }
    
    a.address:hover
    {
      text-decoration: underline;
    }
    
    a.btn:hover
    {
      text-decoration: none;
    }
    
    ul
    {
      margin: 0 0 0 1em;
      
      li
      {
        list-style-position: inside;
      }
    }
    
    .address:before, 
    .language:before, 
    .investigation p:first-child strong:before, 
    .referral:before, 
    .red_flag p:first-child strong:before, 
    .hospital:before, 
    .clinic:before,
    .attendance:before
    {
      margin-left: -($FNW_STATUS_INDENT + 14px)/2;
      margin-right: ($FNW_STATUS_INDENT - 14px)/2;
      display: inline-block;
      width: 14px;
      height: 14px;
      background-image: url(../img/glyphicons-halflings-text.png);
      content: "\0000a0";
    }
    
    table
    {
      .status_available,
      .status_unavailable,
      .status_unknown,
      .status_warning
      {
        visibility: hidden;
      }
      
      .status_available:before, 
      .status_unavailable:before, 
      .status_unknown:before, 
      .status_warning:before
      {
        visibility: visible;
        margin-left: 0;
      }
    }
    
    .address:before
    {
      background-position: -72px 0;
    }
    
    .language:before
    {
      background-position: -240px -120px;
    }
    
    .investigation p:first-child strong:before
    {
      background-position: -360px -48px;
    }
    
    .investigation p:first-child
    {
      margin-top: 0.75em;
    }
    
    .referral:before
    {
      background-position: -24px -24px;
    }
    
    .red_flag p:first-child strong:before
    {
      background-image: url(../img/glyphicons-halflings-red.png);
      background-position: -312px -24px;
    }
    
    .red_flag p:first-child
    {
      margin-top: 0.75em;
    }
    
    .hospital:before
    {
      background-position: -408px -96px;
    }
    
    .clinic:before
    {
      background-position: 0 -24px;
    }
    
    .attendance:before
    {
      background-position: -168px 0;
    }
    
    td.admin.btn-group
    {
      width: 120px;
    }
    
    a.btn
    {
      color: $FNW_TEXT;
      font-weight: normal;
    }
      
    a.btn.btn-primary, a.btn.btn-danger
    {
      color: #fff;
    }
      
    a.btn.btn-top-pad
    {
      margin-top: 10px;
    }
      
    a.btn.btn-bottom-pad
    {
      margin-bottom: 10px;
    }
    
    .tabbable
    {
      margin-top: 10px;
      
      ul.nav
      {
        margin-bottom: 10px;
        
        li a
        {
          text-decoration: none;
        }
        
        li:not(.active) a:hover
        {
          background: $FNW_LIGHT_BLUE;
          color: $FNW_RED;
          cursor: pointer;
        }
      }
    }
    
    .table
    {
      th
      {
        border-top: 0;
      }
      
      th.status_column
      {
        width: 100px;
      }
      
      tr td 
      {
        border-top: 1px solid $FNW_LIGHT_GRAY;
        
        ul
        {
          margin: 0;
          
          li
          {
            list-style-type: none;
          }
        }
      }
      
      .table tr.not-responded td
      {
        color: $FNW_MID_GRAY;
        
        a
        {
          color: $FNW_MID_GRAY;
        }
      }
    }
    
    table.tablesorter
    {
      thead tr 
      {
        th.headerSortUp:after, 
        th.headerSortDown:after,
        th:after
        {
          display: inline-block;
          margin-left: 10px;
          width: 14px;
          height: 14px;
          background-position: 14px 14px;
          background-repeat: no-repeat;
          background-image: url(../img/glyphicons-halflings-blue.png);
          content: "\0000a0";
        }
        
        th:hover
        {
          cursor: pointer;
        }
        
        th.headerSortUp:after
        {
          background-position: -289px -96px;       
        }
        
        th.headerSortDown:after 
        {
          background-position: -312px -96px;
        }
      }
    }
    
    .form-horizontal
    {
      textarea
      {
        height: 70px;
      }
    
      /* better bootstrap defaults for wrapping */
      .radio.inline, .checkbox.inline
      {
        margin-right: 15px;
      }
      
      .radio.inline + .radio.inline, .checkbox.inline + .checkbox.inline {
        margin-left: 0;
      }
      
      .control-group-tight
      {
        margin-bottom: 0px;
      }
      
      h1, h2, h3, h4, h5, h6
      {
        margin-bottom: 10px;
      }
    }
    
    .row.spaced
    {
      margin-top: 5px;
      margin-bottom: 5px;
    }
  }
}

.icon-blue {
  background-image: url(../img/glyphicons-halflings-blue.png);
}

.icon-red {
  background-image: url(../img/glyphicons-halflings-red.png);
}

.icon-green {
  background-image: url(../img/glyphicons-halflings-green.png);
}

.icon-orange {
  background-image: url(../img/glyphicons-halflings-orange.png);
}

.icon-text {
  background-image: url(../img/glyphicons-halflings-text.png);
}
    
.status_available:before, 
.status_unavailable:before, 
.status_unknown:before, 
.status_warning:before,
{
  margin-left: -($FNW_STATUS_INDENT + 14px)/2;
  margin-right: ($FNW_STATUS_INDENT - 14px)/2;
  display: inline-block;
  width: 14px;
  height: 14px;
}

.status_available:before
{
  background-image: url(../img/glyphicons-halflings-green.png);
  background-position: -288px 0;
  content: "\0000a0";
}

.status_unavailable:before
{
  background-image: url(../img/glyphicons-halflings-red.png);
  background-position: -312px 0;
  content: "\0000a0";
}

.status_unknown:before
{
  background-image: url(../img/glyphicons-halflings-text.png);
  background-position: -96px -96px;
  content: "\0000a0";
}

.status_warning:before
{
  background-image: url(../img/glyphicons-halflings-orange.png);
  background-position: 0 -120px;
  content: "\0000a0";
}

